<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.review.AddReviewFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/reviewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/pt_sans_bold"
            android:text="@string/title_review"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/addPostIndicationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reviewHeader"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/pt_sans_italic"
            android:text="@string/default_id_text"
            android:textColor="@color/primaryColor"
            android:textSize="28sp"
            android:typeface="monospace" />

        <RelativeLayout
            android:id="@+id/ratingLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addPostIndicationTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <RatingBar
                android:id="@+id/reviewRatingBar"
                style="@android:style/Widget.Material.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:progressTint="@color/secondaryColor"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:secondaryProgressTint="@color/tertiaryColor"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/overallScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-17dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/reviewRatingBar"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/review_rate"
                android:textColor="@color/secondaryColor"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/inputReviewTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingLayout"
            android:layout_marginStart="3dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/pt_sans_bold"
            android:text="@string/input_title_text"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputReviewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputReviewTitleText"
            android:layout_marginTop="2dp"
            android:hint="@string/title_edit_text"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/inputReviewCommentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputReviewTitle"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/pt_sans_bold"
            android:text="@string/input_comment_text"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputReviewComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputReviewCommentText"
            android:layout_marginTop="2dp"
            android:hint="@string/comment_edit_text"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addPostComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/anonymousSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputReviewComment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/pt_sans_bold"
            android:foregroundTint="@color/primaryColorPale"
            android:text="@string/anonymous"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp"
            app:thumbTint="@color/switch_thumb_selector"
            app:trackTint="@color/switch_track_selector" />

        <Button
            android:id="@+id/doneButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/anonymousSwitch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primaryColor"
            android:fontFamily="@font/pt_sans_bold"
            android:text="@string/done_button_text"
            android:textColor="@color/white" />
    </RelativeLayout>
</ScrollView>