...
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/addReviewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:elevation="50dp"
...
